--- a/DevWeb_Trab_Final/Views/Clientes/Details.cshtml
+++ b/DevWeb_Trab_Final/Views/Clientes/Details.cshtml
@@ -22,6 +22,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NIF)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Morada)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Morada)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.codPostal)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.codPostal)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
