--- a/DevWeb_Trab_Final/Views/Clientes/Edit.cshtml
+++ b/DevWeb_Trab_Final/Views/Clientes/Edit.cshtml
@@ -24,6 +24,16 @@
                 <span asp-validation-for="NIF" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Morada" class="control-label"></label>
+                <input asp-for="Morada" class="form-control" />
+                <span asp-validation-for="NIF" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="codPostal" class="control-label"></label>
+                <input asp-for="codPostal" class="form-control" />
+                <span asp-validation-for="codPostal" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
