--- a/DevWeb_Trab_Final/Views/Clientes/Delete.cshtml
+++ b/DevWeb_Trab_Final/Views/Clientes/Delete.cshtml
@@ -23,6 +23,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NIF)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Morada)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Morada)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CodPostal)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CodPostal)
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
