--- a/DevWeb_Trab_Final/Views/Clientes/Index.cshtml
+++ b/DevWeb_Trab_Final/Views/Clientes/Index.cshtml
@@ -19,6 +19,12 @@
                 @Html.DisplayNameFor(model => model.NIF)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Morada)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CodPostal)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
@@ -35,6 +41,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NIF)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Morada)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CodPostal)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
