Criação dos controllers e adição de anotações aos clientes e funcionarios

--- a/DevWeb_Trab_Final/Views/Clientes/Create.cshtml
+++ b/DevWeb_Trab_Final/Views/Clientes/Create.cshtml
@@ -28,9 +28,9 @@
                 <span asp-validation-for="Morada" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="codPostal" class="control-label"></label>
-                <input asp-for="codPostal" class="form-control" />
-                <span asp-validation-for="codPostal" class="text-danger"></span>
+                <label asp-for="CodPostal" class="control-label"></label>
+                <input asp-for="CodPostal" class="form-control" />
+                <span asp-validation-for="CodPostal" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
