--- a/DevWeb_Trab_Final/Views/Clientes/Delete.cshtml
+++ b/DevWeb_Trab_Final/Views/Clientes/Delete.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.Morada)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.codPostal)
+            @Html.DisplayNameFor(model => model.CodPostal)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.codPostal)
+            @Html.DisplayFor(model => model.CodPostal)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
