--- a/DevWeb_Trab_Final/Views/Funcionarios/Create.cshtml
+++ b/DevWeb_Trab_Final/Views/Funcionarios/Create.cshtml
@@ -1,32 +1,26 @@
-﻿@model DevWeb_Trab_Final.Models.Clientes
+﻿@model DevWeb_Trab_Final.Models.Funcionarios
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
-<h1>Edit</h1>
+<h1>Create</h1>
 
-<h4>Clientes</h4>
+<h4>Funcionarios</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NIF" class="control-label"></label>
-                <input asp-for="NIF" class="form-control" />
-                <span asp-validation-for="NIF" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Morada" class="control-label"></label>
                 <input asp-for="Morada" class="form-control" />
-                <span asp-validation-for="NIF" class="text-danger"></span>
+                <span asp-validation-for="Morada" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CodPostal" class="control-label"></label>
@@ -44,7 +38,12 @@
                 <span asp-validation-for="Telemovel" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="Especializacao" class="control-label"></label>
+                <input asp-for="Especializacao" class="form-control" />
+                <span asp-validation-for="Especializacao" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
