--- a/DevWeb_Trab_Final/Views/Funcionarios/Delete.cshtml
+++ b/DevWeb_Trab_Final/Views/Funcionarios/Delete.cshtml
@@ -1,13 +1,14 @@
-﻿@model DevWeb_Trab_Final.Models.Clientes
+﻿@model DevWeb_Trab_Final.Models.Funcionarios
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Clientes</h4>
+    <h4>Funcionarios</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -17,21 +18,15 @@
             @Html.DisplayFor(model => model.Nome)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NIF)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NIF)
-        </dd>
-        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Morada)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Morada)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CodPostal)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CodPostal)
         </dd>
         <dt class = "col-sm-2">
@@ -46,9 +41,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Telemovel)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Especializacao)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Especializacao)
+        </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
