--- a/DevWeb_Trab_Final/Views/Funcionarios/Edit.cshtml
+++ b/DevWeb_Trab_Final/Views/Funcionarios/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model DevWeb_Trab_Final.Models.Clientes
+﻿@model DevWeb_Trab_Final.Models.Funcionarios
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,7 +6,7 @@
 
 <h1>Edit</h1>
 
-<h4>Clientes</h4>
+<h4>Funcionarios</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -19,14 +19,9 @@
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NIF" class="control-label"></label>
-                <input asp-for="NIF" class="form-control" />
-                <span asp-validation-for="NIF" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Morada" class="control-label"></label>
                 <input asp-for="Morada" class="form-control" />
-                <span asp-validation-for="NIF" class="text-danger"></span>
+                <span asp-validation-for="Morada" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CodPostal" class="control-label"></label>
@@ -42,6 +37,11 @@
                 <label asp-for="Telemovel" class="control-label"></label>
                 <input asp-for="Telemovel" class="form-control" />
                 <span asp-validation-for="Telemovel" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Especializacao" class="control-label"></label>
+                <input asp-for="Especializacao" class="form-control" />
+                <span asp-validation-for="Especializacao" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
