Adição de uma nova classe "Fotografias" e modificação do Controler "Dispositivos"
Co-Authored-By: FranciscoCarvalho2001 <101589943+FranciscoCarvalho2001@users.noreply.github.com>

--- a/DevWeb_Trab_Final/Views/Dispositivos/Create.cshtml
+++ b/DevWeb_Trab_Final/Views/Dispositivos/Create.cshtml
@@ -10,7 +10,9 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+
+        @* o parâmetro 'enctype' é fundamental para o formulário enviar ficheiros*@
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Tipo" class="control-label"></label>
@@ -41,6 +43,17 @@
                 <label asp-for="ClienteFK" class="control-label"></label>
                 <select asp-for="ClienteFK" class ="form-control" asp-items="ViewBag.ClienteFK"></select>
             </div>
+
+            @* recolher a imagem do dispositivo *@
+            <div class="form-group">
+                <label class="control-label">Fotografia</label>
+                <input class="form-control"
+                       type="file"
+                       accept=".jpg,.jpeg,.png"
+                       name="imagemDispositivo" />
+            </div>
+
+            <br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
