--- a/DevWeb_Trab_Final/Views/Reparacaos/Create.cshtml
+++ b/DevWeb_Trab_Final/Views/Reparacaos/Create.cshtml
@@ -13,11 +13,6 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Foto" class="control-label"></label>
-                <input asp-for="Foto" class="form-control" />
-                <span asp-validation-for="Foto" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="DataInicio" class="control-label"></label>
                 <input asp-for="DataInicio" class="form-control" />
                 <span asp-validation-for="DataInicio" class="text-danger"></span>
@@ -28,9 +23,9 @@
                 <span asp-validation-for="DataFim" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Custo" class="control-label"></label>
-                <input asp-for="Custo" class="form-control" />
-                <span asp-validation-for="Custo" class="text-danger"></span>
+                <label asp-for="CustoAux" class="control-label"></label>
+                <input asp-for="CustoAux" class="form-control" />
+                <span asp-validation-for="CustoAux" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Observacao" class="control-label"></label>
