--- a/DevWeb_Trab_Final/Areas/Identity/Pages/Account/Register.cshtml
+++ b/DevWeb_Trab_Final/Areas/Identity/Pages/Account/Register.cshtml
@@ -9,31 +9,68 @@
 
 <div class="row">
     <div class="col-md-4">
+
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
 
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+            <input asp-for="Input.Funcionario.Email" value="a@gmail.com" type="hidden" />
 
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+            <div class="row">
+                <div class"col-md-6">
+                    <hr />
+                    <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+
+                    <div class="form-floating mb-3">
+                        <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                        <label asp-for="Input.Email">Email</label>
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-floating mb-3">
+                        <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                        <label asp-for="Input.Password">Password</label>
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-floating mb-3">
+                        <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                        <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class"col-md-6">
+
+                    <div class="form-floating mb-3">
+                        <input asp-for="Input.Funcionario.Nome" class="form-control" />
+                        <label asp-for="Input.Funcionario.Nome">Nome</label>
+                        <span asp-validation-for="Input.Funcionario.Nome" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-floating mb-3">
+                        <input asp-for="Input.Funcionario.Morada" class="form-control" />
+                        <label asp-for="Input.Funcionario.Morada">Morada</label>
+                        <span asp-validation-for="Input.Funcionario.Morada" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-floating mb-3">
+                        <input asp-for="Input.Funcionario.CodPostal" class="form-control" />
+                        <label asp-for="Input.Funcionario.CodPostal">Código Postal</label>
+                        <span asp-validation-for="Input.Funcionario.CodPostal" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-floating mb-3">
+                        <input asp-for="Input.Funcionario.Telemovel" class="form-control" />
+                        <label asp-for="Input.Funcionario.Telemovel">Telemóvel</label>
+                        <span asp-validation-for="Input.Funcionario.Telemovel" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-floating mb-3">
+                        <input asp-for="Input.Funcionario.Especializacao" class="form-control" />
+                        <label asp-for="Input.Funcionario.Especializacao">Especializacao</label>
+                        <span asp-validation-for="Input.Funcionario.Especializacao" class="text-danger"></span>
+                    </div>
+                </div>
+                <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Registar</button>
             </div>
-
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.Password">Password</label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Registar</button>
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
