--- a/DevWeb_Trab_Final/Views/Shared/_Layout.cshtml
+++ b/DevWeb_Trab_Final/Views/Shared/_Layout.cshtml
@@ -25,6 +25,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Dispositivos" asp-action="Index">Dispositivos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Reparacaos" asp-action="Index">Reparações</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
