--- a/DevWeb_Trab_Final/Views/Shared/_LoginPartial.cshtml
+++ b/DevWeb_Trab_Final/Views/Shared/_LoginPartial.cshtml
@@ -1,13 +1,22 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using DevWeb_Trab_Final.Data
 
+@inject SignInManager<DevWeb_Trab_Final_User> SignInManager
+@inject UserManager<DevWeb_Trab_Final_User> _userManager
+
+@*
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
-
+*@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
-{
+{   
+    var utilizador = await _userManager.GetUserAsync(User);
+    string nomeUtilizador = utilizador.NomeUtilizador;
+    var roleUser = await _userManager.GetRolesAsync(utilizador);
+
     <li class="nav-item">
-        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @nomeUtilizador!</a>
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
