--- a/DevWeb_Trab_Final/Views/Home/Index.cshtml
+++ b/DevWeb_Trab_Final/Views/Home/Index.cshtml
@@ -2,7 +2,34 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container custom-container">
+    <div class="row">
+        <div class="col custom-column">
+            <!-- Conteúdo da primeira coluna -->
+        </div>
+        <div class="col custom-column1">
+            <img src="~/imagens/reparatech.jpg" alt="..." class="img-fluid" alt="Responsive image">
+        </div>
+    </div>
 </div>
+
+<style>
+    .custom-container {
+        width: 1200px;
+        margin-right: 0;
+        margin-left: 0;
+        padding-right: 0;
+        padding-left: 0;
+    }
+
+    .custom-column {
+        background-color: #69D7FF;
+        padding-right: 0;
+        padding-left: 0;
+    }
+    .custom-column{
+        background-color: #69D7FF;
+        padding-right: 0;
+        padding-left: 0;
+    }
+</style>
