--- a/DevWeb_Trab_Final/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/DevWeb_Trab_Final/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -11,10 +11,10 @@
 
 @section Scripts {
     <script>
-        var timeoutMilliseconds = 5000; // 5000 milliseconds = 5 seconds
+        var timeoutMilliseconds = 3000; // 3000 milliseconds = 3 seconds
 
         setTimeout(function () {
-            window.location.href = '@Url.Page("./Register")';
+            window.location.href = '@Url.Page("/Home/Index")';
         }, timeoutMilliseconds);
     </script>
 }
