--- a/DevWeb_Trab_Final/Views/Dispositivos/Edit.cshtml
+++ b/DevWeb_Trab_Final/Views/Dispositivos/Edit.cshtml
@@ -46,7 +46,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Funcionarios" asp-action="Administrador">Voltar á lista</a>
 </div>
 
 @section Scripts {
