--- a/DevWeb_Trab_Final/Views/Shared/_Layout.cshtml
+++ b/DevWeb_Trab_Final/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">DevWeb_Trab_Final</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ReparaTECH</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
                         </li>
                         @if (User.Identity.IsAuthenticated)
                         {
-                            @if (User.IsInRole("Cliente") || User.IsInRole("Funcionario") || User.IsInRole("Administrador"))
+                            @if (User.IsInRole("Cliente") )
                             {
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Dispositivos" asp-action="Index">Dispositivos</a>
@@ -35,15 +35,6 @@
                             }
                             @if (User.IsInRole("Funcionario") || User.IsInRole("Administrador"))
                             {
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
-                                </li>
-                            }
-                            @if ( User.IsInRole("Administrador"))
-                            {
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Funcionarios" asp-action="Index">Funcionarios</a>
-                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Funcionarios" asp-action="Administrador">Administrador</a>
                                 </li>
