--- a/DevWeb_Trab_Final/Views/Reparacaos/Edit.cshtml
+++ b/DevWeb_Trab_Final/Views/Reparacaos/Edit.cshtml
@@ -24,9 +24,9 @@
                 <span asp-validation-for="DataFim" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Custo" class="control-label"></label>
+                <label asp-for="CustoAux" class="control-label"></label>
                 <input asp-for="Custo" class="form-control" />
-                <span asp-validation-for="Custo" class="text-danger"></span>
+                <span asp-validation-for="CustoAux" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Observacao" class="control-label"></label>
@@ -44,7 +44,7 @@
                 <span asp-validation-for="FuncionariosFK" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input  type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
