--- a/DevWeb_Trab_Final/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/DevWeb_Trab_Final/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -6,3 +6,12 @@
 
 <h1>@ViewData["Title"]</h1>
 <partial name="_StatusMessage" model="Model.StatusMessage" />
+@section Scripts {
+    <script>
+        var timeoutMilliseconds = 10000; // 10000 milliseconds = 10 seconds
+
+        setTimeout(function () {
+            window.location.href = '@Url.Page("/Home/Index")';
+        }, timeoutMilliseconds);
+    </script>
+}
