--- a/DevWeb_Trab_Final/Views/Dispositivos/Index.cshtml
+++ b/DevWeb_Trab_Final/Views/Dispositivos/Index.cshtml
@@ -1,59 +1,41 @@
 ﻿@model IEnumerable<DevWeb_Trab_Final.Models.Dispositivos>
-
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Tipo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataReg)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Modelo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Estado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cliente)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tipo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataReg)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Modelo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Estado)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cliente.Email)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+@{
+    var cliente = Model.FirstOrDefault(c => User.Identity.Name.Equals(c.Cliente.Email))?.Cliente;
 }
-    </tbody>
-</table>
+@if(User.IsInRole("Cliente")){
+    @if (cliente!= null)
+    {
+        <h2>Dispositivos de @cliente.Nome</h2>
+
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Tipo</th>
+                    <th>Data de Registro</th>
+                    <th>Modelo</th>
+                    <th>Estado</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var dispositivo in cliente.ListaDipositivos)
+                {
+                   
+                     <tr>
+                         <td>@dispositivo.Tipo</td>
+                         <td>@dispositivo.DataReg</td>
+                         <td>@dispositivo.Modelo</td>
+                         <td>@dispositivo.Estado</td>
+                     </tr>
+                      
+                }
+            </tbody>
+        </table>
+
+      
+    }
+    
+}
